--- a/k8s/mysql-pv.yml
+++ b/k8s/mysql-pv.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: mysql-pv
+  namespace: two-tier
 spec:
   capacity:
     storage: 256Mi
@@ -10,4 +11,4 @@ spec:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
   hostPath:
-    path: /home/ghazanfar/TwoTier-Flask-App-Deployment/mysqldata        #This is your host path where your data will be stored. Make sure to create mysqldata directory in mentioned path
+    path: /home/mysqldata      #This is your host path where your data will be stored. Make sure to create mysqldata directory in mentioned path
