--- a/k8s/mysql-pvc.yml
+++ b/k8s/mysql-pvc.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mysql-pvc
+  namespace: two-tier
 spec:
   accessModes:
     - ReadWriteOnce
